// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TopNavBar should render correctly 1`] = `
<div>
  <div
    aria-label="Top Application Banner"
    class="css-1dzk9h8-TopNavBar"
    role="banner"
  >
    <div
      class="css-hqy842-TopNavBar"
    >
      <div
        class="css-1pvuzw2-LogoWrapper"
      >
        <div
          class="css-1plr80g-PlaceHolder"
        >
          <strong>
            LOGO
          </strong>
          PLACEHOLDER
        </div>
      </div>
    </div>
    <div
      class="css-yhkqsb-TopNavBar"
    />
    <div
      class="css-v74rfr-TopNavBar"
    >
      <div
        role="button"
      >
        <div
          class="css-6mpaj4-Menu"
          data-testid="userMenu"
        >
          <button
            class="css-1idp8wm-Button"
            data-testid="button"
          >
            <span
              class="css-1xr6sam-Button"
            >
              <span
                class="css-1kner5m-Button"
              >
                <div
                  class="css-v4tpzl-Avatar"
                >
                  <img
                    src="https://material-ui.com/static/images/avatar/1.jpg"
                  />
                </div>
              </span>
              <span
                class="css-1qy2jjj-Button"
              >
                <span>
                  <span
                    class="css-dczdc6-UserMenu"
                  >
                    Tom Cruise
                  </span>
                </span>
              </span>
              <span
                class="css-1kner5m-Button"
              >
                <span
                  class="css-1gnbc76-Icon"
                >
                  <span
                    class="css-1k5aruc-Icon"
                  />
                </span>
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TopNavBar should render correctly on dark 1`] = `
<div>
  <div
    aria-label="Top Application Banner"
    class="css-zv5vvk-TopNavBar"
    role="banner"
  >
    <div
      class="css-hqy842-TopNavBar"
    >
      <div
        class="css-1pvuzw2-LogoWrapper"
      >
        <div
          class="css-1plr80g-PlaceHolder"
        >
          <strong>
            LOGO
          </strong>
          PLACEHOLDER
        </div>
      </div>
    </div>
    <div
      class="css-yhkqsb-TopNavBar"
    />
    <div
      class="css-v74rfr-TopNavBar"
    >
      <div
        role="button"
      >
        <div
          class="css-6mpaj4-Menu"
          data-testid="userMenu"
        >
          <button
            class="css-rfi42e-Button"
            data-testid="button"
          >
            <span
              class="css-1xr6sam-Button"
            >
              <span
                class="css-1kner5m-Button"
              >
                <div
                  class="css-v4tpzl-Avatar"
                >
                  <img
                    src="https://material-ui.com/static/images/avatar/1.jpg"
                  />
                </div>
              </span>
              <span
                class="css-1qy2jjj-Button"
              >
                <span>
                  <span
                    class="css-dczdc6-UserMenu"
                  >
                    Tom Cruise
                  </span>
                </span>
              </span>
              <span
                class="css-1kner5m-Button"
              >
                <span
                  class="css-1gnbc76-Icon"
                >
                  <span
                    class="css-14m0jd5-Icon"
                  />
                </span>
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
